--- a/compound.html
+++ b/compound.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <span class="navbar-brand" href="#">
-                <div class="d-flex align-items-center"><span class="material-icons fs-1">developer_board</span>Compound
+                <div class="d-flex align-items-center"><span class="material-icons fs-1 pe-1">developer_board</span>Compound
                     Calculator</div>
             </span>
             <div>
@@ -79,7 +79,7 @@
                         <input type="number" class="form-control" id="gas" name="gas" aria-describedby="gasHelp"
                             value="250.00" step=0.01 min="0.01">
                     </div>
-                    <div id="gasHelp" class="form-text">The fee you cost for gas for each time re-stack</div>
+                    <div id="gasHelp" class="form-text">The fee you cost for gas for each time re-stake</div>
                 </div>
 
                 <div class="text-center"><button type="submit" class="btn btn-primary">Calculate</button></div>
